--- a/accueil.styles.css
+++ b/accueil.styles.css
@@ -2,6 +2,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap');
 
+a
+{
+	text-decoration: none;
+	color: black;
+	cursor: pointer;
+}
 
 p
 {
@@ -20,6 +26,7 @@ h3
     font-weight: normal;
     margin-left: 40px;
 }
+
 
 .Bold
 {
@@ -41,6 +48,11 @@ h3
     margin-right: 10px;
 }
 
+.MargeDResponsiv
+{
+    margin-right: 30px;
+}
+
 .MargeH
 {
     margin-top: 30px;
@@ -55,13 +67,6 @@ h3
 
 .Blanc
 {
-    color: white;
-}
-
-a
-{
-	text-decoration: none;
-	cursor: pointer;
     color: white;
 }
 
@@ -84,6 +89,12 @@ a
     width: 100%;
     height: 50px; 
 }
+
+/*////////////////////////////////////////*/
+
+
+
+						/* DEBUT DU HEADER */
 
 .OhmyfoodMarge
 {
@@ -132,6 +143,13 @@ a
     background: linear-gradient(to bottom right, #FF79DA , #9356DC )
 }
 
+
+/*////////////////////////////////////////*/
+
+
+
+						/* DEBUT DU BODY */
+
 .SectionFonctionnement
 {
     width: 100%;
@@ -151,10 +169,16 @@ a
     box-shadow: 2px 2px 6px 2px #F2F2F2;
     padding: 10px;
     margin-bottom: 15px;
-    width: 80%;
+    width: 80%; 
     height: auto;
     justify-content: center;
-    align-items: center; 
+    align-items: center;   
+}
+
+.BoutonFonctionnement :hover
+{
+    box-shadow: 2px 2px 6px 2px #d8d6d6;
+    cursor: pointer;
 }
 
 .Number
@@ -257,6 +281,12 @@ a
 	margin-left: 90%;
 }
 
+/*////////////////////////////////////////*/
+
+
+
+						/* DEBUT DU FOOTER */
+
 .SectionFooter
 {
     width: 100%;
@@ -271,4 +301,160 @@ a
     display: flex;
     list-style: none;
     align-items: center;  
+}
+
+/*--------------------------------------------RESPONSIVE TABLETTE (768px à 992px)------------------------------------------------*/
+
+@media screen and  (min-width: 769px) and (max-width: 992px)
+{
+
+
+.BoutonFonctionnement
+{
+    position: relative;
+    border: 0px solid;
+    border-radius: 25px;
+    box-shadow: 2px 2px 6px 2px #F2F2F2;
+    padding: 10px;
+    margin-bottom: 15px;
+    width: 80%;
+    max-width: 600px;
+    height: auto;
+    justify-content: center;
+    align-items: center; 
+}
+
+.SectionRestaurant
+{
+    background-color: #F2F2F2;
+    width: 100%;
+    height: 700px;
+    padding-top: 30px;
+}
+
+
+.ResponsivRow
+{
+    display: flex;
+    flex-direction: row;  
+    justify-content: space-between;
+}
+
+.Carte
+{
+    background-color: white;
+	width: 350px;
+   	height: 230px;
+    border: 0px solid;
+    border-radius: 20px  20px 20px 20px;
+	box-shadow: 6px 6px 6px rgb(235, 235, 235);
+}    
+
+.BlocImage
+{
+ 	border-radius: 20px  20px 0px 0px;
+	width: 100%;
+	height: 150px;
+}
+
+.Nouveau
+{
+    position: absolute;
+    width: 90px;
+    height: 35px;
+    background-color: #99E2D0;
+    color: green;
+    border-radius: 5px 5px 5px 5px;
+    bottom: 160px;
+    right: 5%;
+}
+
+}
+
+/*--------------------------------------------RESPONSIVE DESKTOP (Superieur à 992px)------------------------------------------------*/
+
+@media screen and  (min-width: 993px)
+{
+
+.BoutonExplorer
+{
+    border: 0px solid;
+    border-radius: 25px;
+    padding: 15px;
+    color: white;
+    background: linear-gradient(to bottom right, #FF79DA , #9356DC );
+    font-size: 20px;
+    
+}
+
+
+
+.FonctionnementRow
+{
+    display: flex;
+    flex-direction: row;
+   
+}
+
+.BoutonFonctionnement
+{
+    position: relative;
+    border: 0px solid;
+    border-radius: 25px;
+    box-shadow: 2px 2px 6px 2px #F2F2F2;
+    padding: 10px;
+    margin-bottom: 15px;
+    width: 400px;
+    height: auto;
+    justify-content: center;
+    align-items: center; 
+    margin-right: 90px;
+}
+
+.SectionRestaurant
+{
+    background-color: #F2F2F2;
+    width: 100%;
+    height: 800px;
+    padding-top: 30px;
+}
+
+.ResponsivRow
+{
+    display: flex;
+    flex-direction: row;  
+    justify-content: space-between;
+}
+
+.Carte
+{
+    background-color: white;
+	width: 450px;
+   	height: 280px;
+    border: 0px solid;
+    border-radius: 20px  20px 20px 20px;
+	box-shadow: 6px 6px 6px rgb(235, 235, 235);
+  }    
+
+.BlocImage
+{
+ 	border-radius: 20px  20px 0px 0px;
+	width: 100%;
+	height: 200px;
+}
+
+.Nouveau
+{
+    position: absolute;
+    width: 90px;
+    height: 35px;
+    background-color: #99E2D0;
+    color: green;
+    border-radius: 5px 5px 5px 5px;
+    bottom: 210px;
+    right: 5%;
+}
+
+
+
 }
