--- a/AlaFrancaise.styles.css
+++ b/AlaFrancaise.styles.css
@@ -176,20 +176,31 @@ Header
     width: 50px;
 }
 
+.BoutonSection
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    height: 110px;
+    background-color: #FF79DA;
+    margin-bottom: 20px;
+}
+
 .BoutonBase
 {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding: 10px;
+    width: 100%;
+    height: 100%;
+
     border: 0px solid;
     border-radius: 15px;
+
     box-shadow: 2px 2px 6px 2px #e0dfdf;
-    padding: 10px;
-    margin-bottom: 15px;
-    width: 90%;
-    height: 60px;
-    background-color: white;
-   
+    background-color: white;   
 }
 
 .TextPosition
@@ -198,6 +209,15 @@ Header
     flex-direction: row;
     justify-content: space-between;
     margin-top: -25px;
+}
+
+.validation
+{
+    width: 100px;
+    height: 100%;
+    border: 0px solid #99E2D0;
+    background-color: #99E2D0;
+    border-radius: 0 15px 15px 0;
 }
 
 .BoutonCommander
