--- a/accueil.styles.css
+++ b/accueil.styles.css
@@ -63,7 +63,10 @@ h3
     margin-bottom: 30px;
 }
 
-
+.ohmyfood
+{
+    color: white;
+}
 
 .Blanc
 {
@@ -89,6 +92,8 @@ h3
     width: 100%;
     height: 50px; 
 }
+
+
 
 /*////////////////////////////////////////*/
 
@@ -143,6 +148,17 @@ h3
     background: linear-gradient(to bottom right, #FF79DA , #9356DC )
 }
 
+.BoutonExplorer:hover
+{
+    box-shadow: 0px 1px 1px 1px rgb(76, 76, 76) ;
+}
+
+.BoutonExplorer:active
+{
+    box-shadow: 0px 1px 1px 1px white ;
+}
+
+
 
 /*////////////////////////////////////////*/
 
@@ -155,15 +171,13 @@ h3
     width: 100%;
     height: auto;
     margin-top: 50px;
-    padding-bottom: 50px;
-  
+    padding-bottom: 50px;  
 }
 
 
 
 .BoutonFonctionnement
 {
-    position: relative;
     border: 0px solid;
     border-radius: 25px;
     box-shadow: 2px 2px 6px 2px #F2F2F2;
@@ -172,13 +186,20 @@ h3
     width: 80%; 
     height: auto;
     justify-content: center;
-    align-items: center;   
+    align-items: center;  
+    cursor: pointer;
 }
 
-.BoutonFonctionnement :hover
+.BoutonFonctionnement:hover
 {
-    box-shadow: 2px 2px 6px 2px #d8d6d6;
-    cursor: pointer;
+    box-shadow: 8px 8px 8px rgb(214, 214, 214); 
+    color: rgb(76, 76, 76);    
+}
+
+.BoutonFonctionnement:active
+{
+    box-shadow: 4px 4px 4px rgb(214, 214, 214);
+    color: black;
 }
 
 .Number
@@ -208,6 +229,19 @@ h3
 	border: 0px solid;
     border-radius: 20px  20px 20px 20px;
 	box-shadow: 6px 6px 6px rgb(235, 235, 235);
+    cursor: pointer;    
+}
+
+.Carte:hover
+{
+    box-shadow: 8px 8px 8px rgb(214, 214, 214); 
+    color: rgb(76, 76, 76);
+}
+
+.Carte:active
+{
+    box-shadow: 4px 4px 4px rgb(214, 214, 214);
+    color: black;
 }
 
 .BlocImage
@@ -274,11 +308,33 @@ h3
     position: relative;
 }
 
-.HeartIcone
+.fa-heart
 {
 	position: absolute;
-	bottom: 50%;
+	bottom: 40%;
 	margin-left: 90%;
+    font-size: 25px;
+}
+
+.fa-regular
+{
+
+}
+
+.fa-solid-heart
+{
+    color: transparent;
+    background-image: linear-gradient(to bottom right, #FF79DA , #9356DC );
+    background-clip: text; /*Permet de dfinir ou l'on veut appliquer la modification*/
+    -webkit-background-clip: text;
+    opacity: 0;
+    transition: all 350ms ease-out;
+}
+
+.Carte:hover .fa-solid-heart
+{
+    opacity: 1;
+    transform: scale(1.1);
 }
 
 /*////////////////////////////////////////*/
@@ -301,6 +357,11 @@ h3
     display: flex;
     list-style: none;
     align-items: center;  
+}
+
+.Blanc:hover
+{
+  font-size: 17px;
 }
 
 /*--------------------------------------------RESPONSIVE TABLETTE (768px à 992px)------------------------------------------------*/
