--- a/LeDeliceDesSens.Styles.css
+++ b/LeDeliceDesSens.Styles.css
@@ -110,6 +110,60 @@ a
 
 /*////////////////////////////////////////*/
 
+.loader
+{
+position: fixed;
+background-color: white;
+height: 100vh;
+inset: 0;
+z-index: 2;
+opacity: 0.9;
+animation: LoaderEnd 3s forwards;
+
+}
+
+@keyframes LoaderEnd
+{
+    0% {transform: scale(1);}
+    100% {transform: scale(0);}
+}
+
+.Circle
+{
+    z-index: 1;
+    margin: auto;  
+    position: absolute;
+    top: 0; left: 0; right: 0; bottom: 0;
+
+    width: 100px;
+    height: 100px;
+
+    border: 10px solid black;
+    border-top: 10px solid #9356DC ; 
+    border-right: 10px solid #FF79DA ;
+    border-bottom: 10px solid #99E2D0 ;
+    border-left: 10px solid white;
+    border-radius: 50%;
+
+   -webkit-animation: spin 1.5s linear infinite; /*Chrome, explorer etc..*/
+   -o-animation: spin 1.5s linear infinite;  /*Mozilla*/
+   animation: spin 1.5s linear infinite;  
+}
+
+@-webkit-keyframes spin /*Permet d'optimiser le fonctionnement de l'animation sur les vieux navigateurs'*/
+{
+    0% {transform: rotate(0deg);} 
+    100% {transform: rotate(360deg);}
+}
+
+@keyframes spin /*Permet de donner une specification au terme "spin"*/
+{
+    0% {transform: rotate(0deg);} 
+    100% {transform: rotate(360deg);}
+}
+
+/*////////////////////////////////////////*/
+
 
 
 						/* DEBUT DU HEADER */
