--- a/LeDeliceDesSens.Styles.css
+++ b/LeDeliceDesSens.Styles.css
@@ -108,6 +108,12 @@ a
     justify-content: center;    
 }
 
+.HeartIcone
+{
+    margin-left: 30px;
+    font-size: 30px;
+}
+
 /*////////////////////////////////////////*/
 
 .loader
@@ -238,13 +244,25 @@ Header
     justify-content: center;
     border: 0px solid;
     border-radius: 15px;
-    box-shadow: 2px 2px 6px 2px #e0dfdf;
+    box-shadow: 6px 6px 6px rgb(235, 235, 235);
     padding: 10px;
     margin-bottom: 15px;
     width: 90%;
     height: 60px;
     background-color: white;
-   
+    cursor: pointer;
+}
+
+.BoutonBase:hover
+{
+    box-shadow: 8px 8px 8px rgb(214, 214, 214); 
+    color: rgb(76, 76, 76);
+}
+
+.BoutonBase:active
+{
+    box-shadow: 4px 4px 4px rgb(214, 214, 214);
+    color: black;
 }
 
 .TextPosition
@@ -266,6 +284,17 @@ Header
     height: auto;
     margin-top: 40px;
     margin-bottom: 60px;
+    cursor: pointer;
+}
+
+.BoutonCommander:hover
+{
+    box-shadow: 0px 1px 1px 1px rgb(76, 76, 76) ;
+}
+
+.BoutonCommander:active
+{
+    box-shadow: 0px 1px 1px 1px white ;
 }
 
 /*////////////////////////////////////////*/
@@ -288,6 +317,16 @@ Header
     display: flex;
     list-style: none;
     align-items: center;  
+}
+
+.ohmyfood
+{
+    color: white;
+}
+
+.Blanc:hover
+{
+  font-size: 17px;
 }
 
 /*--------------------------------------------RESPONSIVE TABLETTE (768px à 992px)------------------------------------------------*/
@@ -322,11 +361,6 @@ h2
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.HeartIcone
-{
-    margin-left: 30px;
 }
 
 .BoutonBase             /*Bouton de base pour les menus */
