--- a/LaNoteEnchantee.styles.css
+++ b/LaNoteEnchantee.styles.css
@@ -250,7 +250,7 @@ Header
     width: 90%;
     height: 60px;
     background-color: white;
-   
+    cursor: pointer;
 }
 
 .BoutonBase:hover
@@ -284,6 +284,7 @@ Header
     height: auto;
     margin-top: 40px;
     margin-bottom: 60px;
+    cursor: pointer;
 }
 
 .BoutonCommander:hover
