--- a/LaPaletteDuGout.Styles.css
+++ b/LaPaletteDuGout.Styles.css
@@ -109,6 +109,12 @@ a
     justify-content: center;
 }
 
+.HeartIcone
+{
+margin-left: 30px;
+font-size: 30px;
+}
+
 /*////////////////////////////////////////*/
 
 .loader
@@ -239,13 +245,25 @@ Header
     justify-content: center;
     border: 0px solid;
     border-radius: 15px;
-    box-shadow: 2px 2px 6px 2px #e0dfdf;
+    box-shadow: 6px 6px 6px rgb(235, 235, 235);
     padding: 10px;
     margin-bottom: 15px;
     width: 90%;
     height: 60px;
     background-color: white;
-   
+   cursor: pointer;
+}
+
+.BoutonBase:hover
+{
+    box-shadow: 8px 8px 8px rgb(214, 214, 214); 
+    color: rgb(76, 76, 76);
+}
+
+.BoutonBase:active
+{
+    box-shadow: 4px 4px 4px rgb(214, 214, 214);
+    color: black;
 }
 
 .TextPosition
@@ -267,6 +285,17 @@ Header
     height: auto;
     margin-top: 40px;
     margin-bottom: 60px;
+    cursor: pointer;
+}
+
+.BoutonCommander:hover
+{
+    box-shadow: 0px 1px 1px 1px rgb(76, 76, 76) ;
+}
+
+.BoutonCommander:active
+{
+    box-shadow: 0px 1px 1px 1px white ;
 }
 
 /*////////////////////////////////////////*/
@@ -289,6 +318,17 @@ Header
     display: flex;
     list-style: none;
     align-items: center;  
+}
+
+.ohmyfood
+{
+    color: white;
+}
+
+.Blanc:hover
+{
+  font-size: 17px;
+  cursor: pointer;
 }
 
 /*--------------------------------------------RESPONSIVE TABLETTE (768px à 992px)------------------------------------------------*/
@@ -325,10 +365,6 @@ h2
     align-items: center;
 }
 
-.HeartIcone
-{
-    margin-left: 30px;
-}
 
 .BoutonBase             /*Bouton de base pour les menus */
 {
