--- a/accueil.styles.css
+++ b/accueil.styles.css
@@ -104,13 +104,14 @@ height: 100vh;
 inset: 0;
 z-index: 2;
 opacity: 0.9;
-animation: LoaderEnd 3s forwards;
+animation: LoaderEnd 2s forwards;
 
 }
 
 @keyframes LoaderEnd
 {
     0% {transform: scale(1);}
+    90% {transform: scale(1);}
     100% {transform: scale(0);}
 }
 
@@ -246,13 +247,30 @@ animation: LoaderEnd 3s forwards;
 .BoutonFonctionnement:hover
 {
     box-shadow: 8px 8px 8px rgb(214, 214, 214); 
-    color: rgb(76, 76, 76);    
+    color: rgb(76, 76, 76);   
 }
 
 .BoutonFonctionnement:active
 {
     box-shadow: 4px 4px 4px rgb(214, 214, 214);
     color: black;
+}
+
+
+
+.BoutonFonctionnement:hover > .fa-mobile-screen-button
+{
+    color: #9356DC;
+}
+
+.BoutonFonctionnement:hover > .fa-bars
+{
+    color: #9356DC;
+}
+
+.BoutonFonctionnement:hover > .fa-store
+{
+    color: #9356DC;
 }
 
 .Number
