--- a/LeDeliceDesSens.Styles.css
+++ b/LeDeliceDesSens.Styles.css
@@ -33,11 +33,6 @@ h3
     font-size: 20px;
 }
 
-.Size20px
-{
-    font-size: 20px;
-}
-
 .Bold
 {
   font-weight: bold;
@@ -167,13 +162,40 @@ Header
     background-color: #F2F2F2;
 }
 
-.TitrePosition
+.SectionTitre
 {
-    margin-top: 50px;
+    position: relative;
     display: flex;
+    flex-direction: row;
+    align-items: center;
     justify-content: space-between;
+    margin-top: 50px;   
     width: 95%;
-    height: auto; 
+    height: 50px;    
+}
+
+.fa-heart
+{
+	position: absolute;
+	top: 5px;
+	margin-left: 90%;
+    font-size: 35px;  
+}
+
+.fa-solid-heart
+{
+    color: transparent;
+    background-image: linear-gradient(to bottom right, #FF79DA , #9356DC );
+    background-clip: text; /*Permet de dfinir ou l'on veut appliquer la modification*/
+    -webkit-background-clip: text;
+    opacity: 0;
+    transition: all 350ms ease-out;
+}
+
+.fa-solid-heart:hover 
+{
+    opacity: 1;
+    transform: scale(1.1);
 }
 
 .GreenLine
@@ -187,20 +209,18 @@ Header
     display: flex;
     flex-direction: row;
  
-    line-height: 2px;
     margin-bottom: 25px;
-   
-    width: 80%;
-    height: 60px;
+      
+    width: 90%;
+    height: 80px;
 
-    border: 0px solid;
     border-radius: 15px;
     box-shadow: 2px 2px 6px 2px #dcdbdb;
     background-color: #ffffff; 
  
     cursor: pointer; 
+    
     overflow: hidden;
-
     -webkit-animation: apparrition 1.5s; /*Chrome, explorer etc..*/
     -o-animation: apparrition 1.5s ;  /*Mozilla*/
     animation: apparrition 1.5s ;  
@@ -224,12 +244,16 @@ Header
  padding-left: 15px;
  width: 100%;
  height: 100%;
+ overflow: hidden; /*Permet au texte de disparaitre sous l'animation de validation*/
+}
 
- white-space: nowrap;  
- overflow: hidden;
- text-overflow: ellipsis
- 
-
+.Ellipsis
+{
+    font-size: 17px;
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;   
 }
 
 .Tarif
@@ -245,7 +269,7 @@ Header
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100px;
+    min-width: 100px;
     height: 100%;
     border: 0px solid #99E2D0;
     background-color: #99E2D0;
@@ -390,11 +414,16 @@ h2
     margin-top: -50px;
 }
 
-.TitrePosition
+.SectionTitre
 {
-    display: flex;
+    margin-bottom: 50px;
     justify-content: center;
-    align-items: center;
+}
+
+.fa-heart
+{
+	margin-left: 65%;
+     
 }
 
 .BoutonBase             /*Bouton de base pour les menus */
@@ -442,16 +471,16 @@ h2
 }
 
 
-.TitrePosition
+.SectionTitre
 {
-    display: flex;
+    margin-bottom: 50px;
     justify-content: center;
-    align-items: center;
 }
 
-.HeartIcone
+.fa-heart
 {
-    margin-left: 30px;
+	margin-left: 65%;
+     
 }
 
 .ResponsivDesktop
