--- a/LaNoteEnchantee.styles.css
+++ b/LaNoteEnchantee.styles.css
@@ -221,6 +221,28 @@ Header
  
 }
 
+@-webkit-keyframes apparrition /*Permet d'optimiser le fonctionnement de l'animation sur les vieux navigateurs'*/
+{
+ 0% {
+    transform: translateY(500px);
+    opacity: 0;
+} 
+ 100% {
+    transform: translateY(0px); 
+    opacity: 1;
+}
+}
+
+@keyframes apparrition /*Permet de donner une specification au terme "apparrition"*/
+{
+ 0% {transform: translateY(500px); 
+    opacity: 0;
+} 
+ 100% {transform: translateY(0px); 
+    opacity: 1;
+}
+}
+
 .BoutonMenu:hover
 {
     box-shadow: 8px 8px 8px rgb(214, 214, 214); 
@@ -296,25 +318,6 @@ Header
     width: 20px;
     height: 20px;
 }
-
-
-
-
-
-
-@-webkit-keyframes apparrition /*Permet d'optimiser le fonctionnement de l'animation sur les vieux navigateurs'*/
-{
- 0% {transform: translateY(500px);} 
- 100% {transform: translateY(0px);}
-}
-
-@keyframes apparrition1 /*Permet de donner une specification au terme "spin"*/
-{
- 0% {transform: translateY(500px);} 
- 100% {transform: translateY(0px);}
-}
-
-
 
 .validation
 {
