--- a/accueil.styles.css
+++ b/accueil.styles.css
@@ -243,6 +243,7 @@ animation: LoaderEnd 2s forwards;
 {
     box-shadow: 8px 8px 8px rgb(214, 214, 214); 
     opacity: 0.8;
+    background: linear-gradient(to bottom right, #ffffff , #e7dbfb );    
 }
 
 .BoutonFonctionnement:active
